@@ -13,6 +13,11 @@ GNU coreutils NEWS                                    -*- outline -*-
   date: invalid date '\260'
   [This bug was present in "the beginning".]
 
+  df no longer outputs control characters present in the mount point name.
+  Such characters are replaced with '?', so for example, scripts consuming
+  lines output by df, can work reliably.
+  [This bug was present in "the beginning".]
+
   head --lines=-N (-n-N) now resets the read pointer of a seekable input file.
   This means that "head -n-3" no longer consumes all of its input, and lines
   not output by head may be processed by other programs.  For example, this
